# PHIDS

./: .actrc  .codespell-ignore-words.txt  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Justfile  LICENSE  MAJOR_IMPROVEMENTS.md  README.md  REUSE.toml  TRADEMARK_POLICY.md  chisel_refactor_plan.md  copy_script10.py  copy_script11.py  copy_script12.py  copy_script13.py  copy_script5.py  copy_script6.py  copy_script7.py  copy_script8.py  copy_script9.py  docker-compose.yml  fix.py  fix2.py  fix3.py  fix_flow_field.py  fix_njit.py  fix_okf.py  fix_syntax.py  fix_syntax2.py  fix_test_export4.py  fix_test_export5.py  fix_test_export6.py  fix_test_export_finally.py  fix_test_sys2.py  fix_type.py  mkdocs.yml  out.txt  (+28 more)
.Jules/: palette.md
.agents/: README.md
.agents/manifesto/: phids-core-philosophy.md
.agents/memory/: architecture_state_map.md  bolt.md  canon.md  canon.md.orig  chisel.md  complexity.md  palette.md
.agents/roles/: 01-orchestrator.md  02-scientific-architect.md  03-engine-developer.md  04-qa-automator.md  05-docs-librarian.md  06-git-operator.md  07-api-and-ui-developer.md  08-telemetry-and-data-engineer.md
.agents/rules/: 00-python-modernization.md  01-stochastic-engine-and-replay.md  02-numba-constraints.md  03-git-security-and-signing.md  04-markdown-formatting.md
.agents/workflows/: delegation-protocol.md  implement-scientific-model.md  vertical-slice-development.md
.github/: CONTRIBUTING.md  copilot-instructions.md  dependabot.yml
.github/act-events/: push-tag.json
.github/agents/: docs-annotator.agent.md  docs-librarian.agent.md  docs-operator.agent.md  docs-scientist.agent.md  git-ops.agent.md  test-ops.agent.md
.github/prompts/: docstrings.md.prompt.md
.github/workflows/: ci.yml  docker-publish.yml  docs-pages.yml  etl-publish.yml  release-binaries.yml  secrets.env.example
LICENSES/: EUPL-1.2.txt  LicenseRef-PHIDS-Commercial.txt  LicenseRef-Proprietary-Documentation.txt  LicenseRef-Proprietary-Trademark.txt
docs/: PHIDS_htmx_ui_design_specification.md  architecture.md  comprehensive_description.md  docstring_guidelines.md  index.md  information-architecture.md  reference.md  requirements_coverage.md  technical_requirements.md  zarr-replay-implementation.md
docs/appendices/: readme.md
docs/architecture/: index.md
docs/development/: agent-ecosystem-and-governance.md  agent-invocation-and-reporting.md  agent-ownership-delegation.md  agent-target-state-blueprint.md  containers-and-release-automation.md  contribution-workflow-and-quality-gates.md  documentation-standards.md  documentation-status-and-open-work.md  github-actions-and-local-ci.md  index.md  mcp-capability-model.md  mcp-lifecycle.md  phase-1-high-risk-review-findings.md  release-checklist.md  scientific-authoring-workflow.md  testing-strategy-and-benchmark-policy.md  testing-uplift-roadmap.md
docs/development_guide/: agent_ecosystem.md  contribution_workflow.md
docs/engine/: biotope-and-double-buffering.md  ecs-and-spatial-hash.md  flow-field.md  formal-algorithmic-model.md  index.md  interaction.md  lifecycle.md  signaling.md
docs/foundations/: index.md  research-scope.md
docs/interfaces/: index.md  rest-and-websocket-surfaces.md
docs/javascripts/: mermaid.js
docs/legacy/: index.md
docs/reference/: api.md  glossary-and-concept-index.md  index.md  module-map.md  requirements-traceability.md
docs/scenario_guide/: biological_accuracy_upgrade.md  curated_examples.md  database_and_ui_roadmap.md  design_space_exploration.md  dse_roadmap.md  empirical_database.md  empirical_database_pipeline.md  index.md  parameter_normalization_roadmap.md  scenario_authoring.md  trophic_optimizer.md
docs/scenarios/: curated-example-catalog.md  index.md  scenario-authoring-and-trigger-semantics.md  schema-and-curated-examples.md
docs/scientific_model/: chemotaxis.md  ecological_analytics.md  flora_and_symbiosis.md  herbivore_behavior.md  index.md  mathematical_framework.md  morphological_defenses.md  population_dynamics.md  reaction_diffusion.md
docs/technical_architecture/: engine_execution.md  interfaces_and_ui.md  system_architecture.md  telemetry.md  testing_architecture.md  trophic_optimizer.md
docs/telemetry/: analytics-and-export-formats.md  index.md  replay-and-termination-semantics.md
docs/tests/: gaps_and_recommendations.md  index.md  quality_analysis.md  system_mapping.md  test_taxonomy.md  testing_architecture.md
docs/ui/: batch-runner-and-aggregate-analysis.md  diagnostics-and-live-observation.md  draft-state-and-load-workflow.md  htmx-partials-and-builder-routes.md  index.md
examples/: dry_shrubland_cycles.json  eternal_canopy_blueprint.json  meadow_defense.json  mixed_forest_understory.json  rectangular_crossfire.json  rectangular_crossfire_extended.json  root_network_alarm_chain.json  wind_tunnel_orchard.json
packaging/: phids.spec
scripts/: bootstrap.py  check_no_extended_imports.py  clean_branches.py  inspect_zarr.py  local_ci.sh  phids_request_trace.py  rewrite_schemas_imports.py  run_ci_with_act.sh  run_sim_benchmark.py  target_cov.sh  target_cov.zsh  validate_okf.py  write_templates.py
src/data_pipeline/: __init__.py  archetype_extractor.py  manifest.json  provenance.py  run_all.py  run_extended.py  transform.py
src/phids/: __init__.py  __main__.py  mcp_server.py
src/phytodynamics/: __init__.py
tests/: README.md  conftest.py  test_additional_coverage.py  test_api_builder_and_helpers.py  test_api_routes.py  test_batch_runner.py  test_biotope_diffusion.py  test_condition_parsing_integration.py  test_coverage_gaps.py  test_coverage_thresholds.py  test_dashboard_presenter.py  test_ecs_world.py  test_example_scenarios.py  test_export_pipeline.py  test_flow_field.py  test_flow_field_benchmark.py  test_logging.py  test_namespace_alias.py  test_replay_roundtrip.py  test_schemas_and_invariants.py  test_spatial_hash_benchmark.py  test_systems_behavior.py  test_telemetry_per_species.py  test_termination_and_loop.py  test_ui_routes.py  test_ui_state.py  test_zarr_replay.py
tests/benchmarks/: test_flow_field_benchmark.py  (+5 more)
(+274 files in other folders)
