[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phytodynamics"
version = "0.1.0"
description = "PHIDS – Plant-Herbivore Interaction & Defense Simulator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "numba>=0.59",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "polars>=0.20",
    "pydantic>=2.7",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pre-commit>=3.7",
    "pydocstyle>=6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/phytodynamics"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/phytodynamics", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/phytodynamics",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--benchmark-disable-gc",
    "--benchmark-sort=mean",
]

[tool.coverage.run]
source = ["src/phytodynamics"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.pydocstyle]
convention = "google"
add-ignore = ["D401"]
