[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phids"
version = "0.2.0"
description = "PHIDS – Plant-Herbivore Interaction & Defense Simulator"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "numba>=0.59",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "polars>=0.20",
    "pydantic>=2.7",
    "msgpack>=1.0",
    "mcp>=1.26.0",
    "jinja2>=3.1.6",
]

[project.scripts]
phids = "phids.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pre-commit>=3.7",
    "pydocstyle>=6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/phids"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/phids", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/phids",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--benchmark-disable-gc",
    "--benchmark-sort=mean",
]

[tool.coverage.run]
source = ["src/phids"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.pydocstyle]
convention = "google"
add-ignore = ["D401"]
