[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phids"
version = "0.6.0"
description = "PHIDS – Plant-Herbivore Interaction & Defense Simulator"
authors = [{ name = "Benjamin Förster", email = "mail@benjamin-foerster.de" }]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.1.0",
    "scipy>=1.15.0",
    "numba>=0.60.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0.0",
    "polars>=1.42.1",
    "pydantic>=2.10.0",
    "mcp>=1.26.0",
    "jinja2>=3.1.6",
    "pandas>=2.2.0",
    "matplotlib>=3.10.0",
    "zarr>=3.0.0",
    "typer>=0.16.0",
    "pandas-stubs~=3.0.3",
    "deap>=1.4.4",
    "optuna>=4.9.0",
]

[project.scripts]
phids = "phids.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=5.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
    "pre-commit>=4.0.0",
    "zensical>=0.0.46",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-htmlproofer-plugin>=1.5.0",
    "pyyaml>=6.0.2",
    "types-PyYAML>=6.0.12.20240806",
    "taskipy>=1.14.1",
    "mutmut>=2.4.0",
    "beautifulsoup4>=4.15.0",
]

[tool.taskipy.tasks]
setup = "python scripts/bootstrap.py"

[tool.hatch.build.targets.wheel]
packages = ["src/phids"]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py313"
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "ARG", "TCH", "FA", "N", "RUF", "D"]
ignore = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["phids"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src/phids"]
plugins = ["pydantic.mypy"]
cache_dir = ".cache/mypy"

[tool.mutmut]
source_paths = [
    "src/phids/engine/core/flow_field.py",
    "src/phids/engine/core/ecs.py",
    "src/phids/engine/core/biotope.py",
]
also_copy = ["src/"]
pytest_add_cli_args = ["--override-ini=addopts="]
pytest_add_cli_args_test_selection = [
    "tests/unit/engine/core/test_flow_field_mutation_pilot.py",
    "tests/unit/engine/core/test_flow_field.py",
    "tests/unit/engine/core/test_ecs_world.py",
    "tests/unit/engine/core/test_ecs_mutation_pilot.py",
    "tests/unit/engine/core/test_biotope_diffusion.py",
    "tests/unit/engine/core/test_biotope_state_mutation_pilot.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "benchmark: performance benchmark tests; deselect with -m 'not benchmark'",
    "mutation_pilot: focused deterministic mutation-resistance pilots for branch semantics",
    "hypothesis_pilot: optional bounded Hypothesis pilot invariants for interaction arithmetic",
]
addopts = [
    "--cov=src/phids",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "--benchmark-disable-gc",
    "--benchmark-sort=mean",
    "--benchmark-storage=.cache/benchmarks", # Store benchmark outputs here
]
cache_dir = ".cache/pytest"


[tool.coverage.run]
source = ["src/phids"]
data_file = ".cache/coverage"

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = ".cache/htmlcov"
